# cortex-gateway

./: .env.example  README.md  cortex_gateway.db  notes_repo structure.txt  pyproject.toml
cortex_gateway/: __init__.py  __main__.py  app.py  cli.py  config.py  db.py  router.py
cortex_gateway/static/: dashboard.html  index.html  login.html
cortex_gateway/static/css/: style.css
cortex_gateway/static/js/: auth.js  dashboard.js  home.js
git_files/: .env.example  .gitignore  LICENSE  README.md  requirements.txt
source_code/: server.py
source_code/leandix_cortex/: __init__.py  config.py  leandix_cortex.py  pipeline.py  router.py
